--- a/newly-discovered-nodes/index.html
+++ b/newly-discovered-nodes/index.html
@@ -113,24 +113,29 @@
                                         <p>这次的更新跨足了美国、新加坡、加拿大、日本、欧洲、韩国、香港等多个地区，节点覆盖广泛，最高速度可达18.3 M/S。这意味着，无论您身处何处，都能享受到更快、更稳定的网络连接。这些新节点的加入，不仅为您提供了更广泛的网络覆盖，还能让您轻松解锁全球各地的网络内容，尽情畅游互联网。无论是日本的动漫、美国的影视、还是欧洲的新闻，都能够一手掌握。只需复制下方提供的v2ray/Clash订阅链接，添加到您的客户端，就能立即体验到新节点带来的畅快感受。这次更新的目的就是为了让您拥有更畅快、更愉悦的网络体验，享受高速流畅的网络连接。随着全球互联网的发展，网络已经成为我们生活中不可或缺的一部分，而这次更新就是为了让您更好地融入这个数字化的世界。</p>
                     <p>&nbsp;</p>
 
-                                        <h3>高速机场推荐1【<a href="javascript:;" class="js_to" data-url="https://www.dginv.click/#/register?code=" data-type="Gougou" data-code="TEAyo1QK" rel="nofollow noopener" style="color:red;">狗狗加速</a>】</h3>
-                    <p>狗狗加速作为第一家上线Hysteria1协议的机场，目前已经全面上线Hysteria2协议；不同于hy1，hy2全面优化了链接速度(0-RTT)，进一步降低延迟；同时使用全新的带宽控制方式；能发挥您带宽的最大潜能！全天4K秒开，机房遍布全球，IP多多益善，99%流媒体解锁，油管、葫芦、奈菲，小电影丝般顺滑！ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选择，现在注册即可免费试用！</p>
-<p>网站注册地址：【<a href="javascript:;" class="js_to" data-url="https://www.dginv.click/#/register?code=" data-type="Gougou" data-code="TEAyo1QK" rel="nofollow noopener" style="color:red">狗狗加速（点击注册）</a>】<br></p>
-<p style="margin-bottom:3rem;color:#999;font-style:italic;">注：跳转链接可能会 <b style="color:red;">被墙</b> ，如多次打开失败，请先使用下面不稳定免费订阅后，再尝试点击链接</p>                    <h3>高速机场推荐2【<a href="javascript:;" class="js_to" data-url="https://www.nfsq.us/#/register?code=" data-type="Nongfu" data-code="UTg5SIHV" rel="nofollow noopener" style="color:red;">农夫山泉</a>】</h3>
+                                        <h3>高速机场推荐1【<a href="javascript:;" class="js_to" data-url="https://kkjiasu.top/#/register?code=" data-type="KKjiasu" data-code="Jgf8FsxV" rel="nofollow noopener" style="color:red;">KK加速</a>】</h3>
                     <p style="margin-bottom: 20px; padding: 0px; line-height: 1.8; overflow-wrap: break-word; font-size: 15px; color: rgb(96, 98, 102); font-family: &quot;PingFang SC&quot;, &quot;Hiragino Sans GB&quot;, &quot;Microsoft YaHei&quot;, STHeiti, &quot;WenQuanYi Micro Hei&quot;, Helvetica, Arial, sans-serif;">无视高峰，全天4K秒开，机房遍布全球，IP多多益善，99%流媒体解锁，油管、葫芦、奈菲，小电影丝般顺滑！
 IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选择，现在注册即可免费试用！</p>
 
 
 
-<p style="margin-bottom: 20px; padding: 0px; line-height: 1.8; overflow-wrap: break-word; font-size: 15px; color: rgb(96, 98, 102); font-family: &quot;PingFang SC&quot;, &quot;Hiragino Sans GB&quot;, &quot;Microsoft YaHei&quot;, STHeiti, &quot;WenQuanYi Micro Hei&quot;, Helvetica, Arial, sans-serif;">网站注册地址：【<a href="javascript:;" class="js_to" data-url="https://www.nfsq.us/#/register?code=" data-type="Nongfu" data-code="UTg5SIHV" rel="nofollow noopener" style="margin: 0px; padding: 0px; color: #ff0000;">星辰VPN（点击注册）</a>】</p>
+<p style="margin-bottom: 20px; padding: 0px; line-height: 1.8; overflow-wrap: break-word; font-size: 15px; color: rgb(96, 98, 102); font-family: &quot;PingFang SC&quot;, &quot;Hiragino Sans GB&quot;, &quot;Microsoft YaHei&quot;, STHeiti, &quot;WenQuanYi Micro Hei&quot;, Helvetica, Arial, sans-serif;">网站注册地址：【<a href="javascript:;" class="js_to" data-url="https://kkjiasu.top/#/register?code=" data-type="KKjiasu" data-code="Jgf8FsxV" rel="nofollow noopener" style="margin: 0px; padding: 0px; color: #ff0000;">KK加速（点击注册）</a>】</p>
 
-                    <h3>高速机场推荐3【<a href="javascript:;" class="js_to" data-url="https://11008866.xyz/#/register?code=" data-type="Xingchen" data-code="6KO4Fpse" rel="nofollow noopener" style="color:red;">星辰机场</a>】</h3>
+                    <h3>高速机场推荐2【<a href="javascript:;" class="js_to" data-url="https://11008866.xyz/#/register?code=" data-type="Xingchen" data-code="6KO4Fpse" rel="nofollow noopener" style="color:red;">星辰机场</a>】</h3>
                     <p style="margin-bottom: 20px; padding: 0px; line-height: 1.8; overflow-wrap: break-word; font-size: 15px; color: rgb(96, 98, 102); font-family: &quot;PingFang SC&quot;, &quot;Hiragino Sans GB&quot;, &quot;Microsoft YaHei&quot;, STHeiti, &quot;WenQuanYi Micro Hei&quot;, Helvetica, Arial, sans-serif;">无视高峰，全天4K秒开，机房遍布全球，IP多多益善，99%流媒体解锁，油管、葫芦、奈菲，小电影丝般顺滑！
 IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选择，现在注册即可免费试用！</p>
 
 
 
 <p style="margin-bottom: 20px; padding: 0px; line-height: 1.8; overflow-wrap: break-word; font-size: 15px; color: rgb(96, 98, 102); font-family: &quot;PingFang SC&quot;, &quot;Hiragino Sans GB&quot;, &quot;Microsoft YaHei&quot;, STHeiti, &quot;WenQuanYi Micro Hei&quot;, Helvetica, Arial, sans-serif;">网站注册地址：【<a href="javascript:;" class="js_to" data-url="https://11008866.xyz/#/register?code=" data-type="Xingchen" data-code="6KO4Fpse" rel="nofollow noopener" style="margin: 0px; padding: 0px; color: #ff0000;">星辰VPN（点击注册）</a>】</p>
+
+                    <h3>高速机场推荐3【<a href="javascript:;" class="js_to" data-url="https://www.nfsq.us/#/register?code=" data-type="Nongfu" data-code="UTg5SIHV" rel="nofollow noopener" style="color:red;">农夫山泉</a>】</h3>
+                    <p style="margin-bottom: 20px; padding: 0px; line-height: 1.8; overflow-wrap: break-word; font-size: 15px; color: rgb(96, 98, 102); font-family: &quot;PingFang SC&quot;, &quot;Hiragino Sans GB&quot;, &quot;Microsoft YaHei&quot;, STHeiti, &quot;WenQuanYi Micro Hei&quot;, Helvetica, Arial, sans-serif;">无视高峰，全天4K秒开，机房遍布全球，IP多多益善，99%流媒体解锁，油管、葫芦、奈菲，小电影丝般顺滑！
+IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选择，现在注册即可免费试用！</p>
+
+
+
+<p style="margin-bottom: 20px; padding: 0px; line-height: 1.8; overflow-wrap: break-word; font-size: 15px; color: rgb(96, 98, 102); font-family: &quot;PingFang SC&quot;, &quot;Hiragino Sans GB&quot;, &quot;Microsoft YaHei&quot;, STHeiti, &quot;WenQuanYi Micro Hei&quot;, Helvetica, Arial, sans-serif;">网站注册地址：【<a href="javascript:;" class="js_to" data-url="https://www.nfsq.us/#/register?code=" data-type="Nongfu" data-code="UTg5SIHV" rel="nofollow noopener" style="margin: 0px; padding: 0px; color: #ff0000;">星辰VPN（点击注册）</a>】</p>
 
 
                     <p>&nbsp;</p>
@@ -154,8 +159,8 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-57254.htm">Pandas 错误记录</a></h4>
-                <p>1.错误发生在从hdfs下载csv文件到本地，利用pandas读取报错 出现此错误的原因是因为输入文件的路径是文件夹路径，而不是文件本身。 查看本地文件，果然data_rh.csv是个假数据文件打开里</p>
+                <h4><a href="/news/article-47683.htm">动物医院申请条件及流程表图片模板下载（动物医院办理条件）</a></h4>
+                <p>摘要：       本篇文章给大家谈谈动物医院申请条件及流程表图片模板下载，以及动物医院办理条件对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、开宠物医院需要什么证件...  </p>
             </div>
         </div>
     </div>
@@ -164,8 +169,8 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2025-1-27-free-v2ray.htm">1月27日更新22.9M/S，2025年最新高速Clash/V2ray/Shadowrocket/SSR订阅链接免费节点地址分享</a></h4>
-                <p>这一次的节点更新覆盖了香港、新加坡、韩国、日本、美国、欧洲、加拿大等地区,最高速度可达22.9 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2025-2-8-free-node-subscribe.htm">2月8日更新20.4M/S，2025年最新高速SSR/Shadowrocket/V2ray/Clash订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了加拿大、美国、韩国、日本、新加坡、欧洲、香港等地区,最高速度可达20.4 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -174,8 +179,8 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-38288.htm">人和宠物打的狂犬疫苗一样吗 人和宠物打的狂犬疫苗一样吗多少钱</a></h4>
-                <p>摘要：       大家好，今天小编关注到一个比较有意思的话题，就是关于人和宠物打的狂犬疫苗一样吗的问题，于是小编就整理了4个相关介绍人和宠物打的狂犬疫苗一样吗的解答，让我们一起看看吧。狗打了狂犬疫苗</p>
+                <h4><a href="/news/article-41748.htm">netty系列之:netty中各不同种类的channel详解</a></h4>
+                <p>文章目录  简介 ServerChannel和它的类型   Epoll和Kqueue AbstractServerChannel ServerSocketChannel ServerDomainSoc</p>
             </div>
         </div>
     </div>
@@ -184,8 +189,8 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-43241.htm">畜牧局买疫苗（畜牧局发放的疫苗都什么牌子的）</a></h4>
-                <p>摘要：       今天给各位分享畜牧局买疫苗的知识，其中也会对畜牧局发放的疫苗都什么牌子的进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、蓬莱区畜牧局有猫疫.</p>
+                <h4><a href="/news/article-56689.htm">动物疫苗接种时间表最新消息查询（动物疫苗法最新消息2019）</a></h4>
+                <p>摘要：       今天给各位分享动物疫苗接种时间表最新消息查询的知识，其中也会对动物疫苗法最新消息2019进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、小.</p>
             </div>
         </div>
     </div>
@@ -194,8 +199,8 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-55019.htm">让猫挠了轻微出血用打疫苗吗多少钱（让猫挠了出血怎么消毒）</a></h4>
-                <p>摘要：       今天给各位分享让猫挠了轻微出血用打疫苗吗多少钱的知识，其中也会对让猫挠了出血怎么消毒进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、被猫抓.</p>
+                <h4><a href="/free-nodes/2025-1-5-clash-windows.htm">1月5日更新20.2M/S，2025年最新高速V2ray/SSR/Clash/Shadowrocket订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了日本、香港、欧洲、新加坡、美国、加拿大、韩国等地区,最高速度可达20.2 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -204,8 +209,8 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-44730.htm">违背宠物领养协议怎么处理的（宠物领养条约）</a></h4>
-                <p>摘要：       本篇文章给大家谈谈违背宠物领养协议怎么处理的，以及宠物领养条约对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、宠物领养协议是否有法律效力...       </p>
+                <h4><a href="/news/article-45728.htm">三国杀武将翻面有什么用（三国杀中武将翻面什么意思）</a></h4>
+                <p>摘要：       本篇文章给大家谈谈三国杀武将翻面有什么用，以及三国杀中武将翻面什么意思对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、三国杀里武将翻面是什么意思?是什么..</p>
             </div>
         </div>
     </div>
@@ -214,8 +219,8 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-57822.htm">动物疫苗如何存放 动物疫苗如何存放保鲜</a></h4>
-                <p>摘要：       大家好，今天小编关注到一个比较有意思的话题，就是关于动物疫苗如何存放的问题，于是小编就整理了2个相关介绍动物疫苗如何存放的解答，让我们一起看看吧。动物防疫站存放疫苗冷库如何设计？成</p>
+                <h4><a href="/free-nodes/2025-2-7-free-node-subscribe.htm">2月7日更新22.2M/S，2025年最新高速Clash/Shadowrocket/SSR/V2ray订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了香港、新加坡、日本、加拿大、韩国、美国、欧洲等地区,最高速度可达22.2 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -224,8 +229,8 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2025-2-20-clash-node-daily-updates.htm">2月20日更新22.2M/S，2025年最新高速SSR/Clash/Shadowrocket/V2ray订阅链接免费节点地址分享</a></h4>
-                <p>这一次的节点更新覆盖了加拿大、美国、韩国、欧洲、香港、新加坡、日本等地区,最高速度可达22.2 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/news/article-36820.htm">动物医院实践心得体会怎么写范文四年级（动物医院实践个人总结）</a></h4>
+                <p>摘要：       本篇文章给大家谈谈动物医院实践心得体会怎么写范文四年级，以及动物医院实践个人总结对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、医院志愿服务心得体会... </p>
             </div>
         </div>
     </div>
@@ -234,8 +239,8 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-68038.htm">动物疫苗的生产及检验 动物疫苗的生产及检验方法</a></h4>
-                <p>摘要：       大家好，今天小编关注到一个比较有意思的话题，就是关于动物疫苗的生产及检验的问题，于是小编就整理了3个相关介绍动物疫苗的生产及检验的解答，让我们一起看看吧。动物检疫合格证明需要查什么</p>
+                <h4><a href="/news/article-37798.htm">同城免费领养宠物怎么领取 同城免费领养宠物怎么领取的</a></h4>
+                <p>摘要：       大家好，今天小编关注到一个比较有意思的话题，就是关于同城免费领养宠物怎么领取的问题，于是小编就整理了4个相关介绍同城免费领养宠物怎么领取的解答，让我们一起看看吧。58上怎么发布免费</p>
             </div>
         </div>
     </div>
@@ -244,8 +249,8 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2025-1-18-free-ssr-subscribe.htm">1月18日更新21.5M/S，2025年最新高速Shadowrocket/SSR/Clash/V2ray订阅链接免费节点地址分享</a></h4>
-                <p>这一次的节点更新覆盖了欧洲、美国、加拿大、新加坡、韩国、香港、日本等地区,最高速度可达21.5 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/news/article-61292.htm">总结vue项目引入Vant遇到的坑</a></h4>
+                <p>首先贴上vant官网教程https://youzan.github.io/vant/#/zh-CN/quickstart 下面是我的代码以及问题，采用的是官网中第一种推荐使用的按需引入组件方法 1、c</p>
             </div>
         </div>
     </div>
@@ -256,7 +261,7 @@ IPLC、IEPL中转，点对点专线连接。高速冲浪，科学上网不二选
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                                <h4><span class="badge" style="float: right;">15</span> <a href="/date/2025-03/" title="2025-03 归档">2025-03</a></h4>
+                                <h4><span class="badge" style="float: right;">24</span> <a href="/date/2025-03/" title="2025-03 归档">2025-03</a></h4>
                                 <h4><span class="badge" style="float: right;">80</span> <a href="/date/2025-02/" title="2025-02 归档">2025-02</a></h4>
                                 <h4><span class="badge" style="float: right;">83</span> <a href="/date/2025-01/" title="2025-01 归档">2025-01</a></h4>
                             </div>
