--- a/date/2025-01/page-2.htm
+++ b/date/2025-01/page-2.htm
@@ -296,8 +296,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-36335.htm">宠物粮食加工厂挣钱吗知乎视频下载（宠物粮食加工厂怎么起步）</a></h4>
-                <p>摘要：       本篇文章给大家谈谈宠物粮食加工厂挣钱吗知乎视频下载，以及宠物粮食加工厂怎么起步对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、拍农村短视频如何赚钱,竟能..</p>
+                <h4><a href="/news/article-58393.htm">宠物店利润大吗（宠物店利润和成本分析）</a></h4>
+                <p>摘要：       今天给各位分享宠物店利润大吗的知识，其中也会对宠物店利润和成本分析进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、开宠物店的前景和利润如何.</p>
             </div>
         </div>
     </div>
@@ -306,8 +306,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-45229.htm">动物疫苗作用是什么（动物疫苗的概念）</a></h4>
-                <p>摘要：       今天给各位分享动物疫苗作用是什么的知识，其中也会对动物疫苗的概念进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、宠物为什么要打疫苗?... </p>
+                <h4><a href="/news/article-45727.htm">C语言实现BMP格式转RGB格式、YUV格式</a></h4>
+                <p>此代码的功能是传入BMP格式的数据，传出提取的RGB数据。BMP图像支持8bit、16bit、24bit、32bit的格式，得到的都是24bit的RGB格式图像，如果想得到YUV格式的图像，可以将得到</p>
             </div>
         </div>
     </div>
@@ -326,8 +326,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-47197.htm">养猫的人容易得什么病视频讲解（养猫咪的人会得什么病）</a></h4>
-                <p>摘要：       本篇文章给大家谈谈养猫的人容易得什么病视频讲解，以及养猫咪的人会得什么病对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、养猫的人容易得什么病...     </p>
+                <h4><a href="/news/article-45228.htm">Kotlin（二） 标准函数和静态方法</a></h4>
+                <p>1、标准函数 标准函数是指Standard.kt文件中定义的函数  1.1、let函数 let函数提供了函数式API编程接口，并将原始对象作为参数传递到Lambda表达式中，标准的写法如下： obj.</p>
             </div>
         </div>
     </div>
@@ -336,8 +336,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-36334.htm">匿名类（Anonymous Classes）</a></h4>
-                <p>匿名类 匿名类可以让代码更加简洁，因为它允许声明的同时实例化一个类。类似于局部类，只不过他们没有名字，当只需要一次局部类时，用匿名类更简洁。  匿名类的声明 局部类的声明是类的声明，但匿名类的声明是一</p>
+                <h4><a href="/free-nodes/2025-1-27-free-v2ray.htm">1月27日更新22.9M/S，2025年最新高速Clash/V2ray/Shadowrocket/SSR订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了香港、新加坡、韩国、日本、美国、欧洲、加拿大等地区,最高速度可达22.9 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -346,8 +346,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-42744.htm">猫三针没打完可以打狂犬疫苗吗（猫咪没打完猫三联可以打狂犬疫苗吗）</a></h4>
-                <p>摘要：       本篇文章给大家谈谈猫三针没打完可以打狂犬疫苗吗，以及猫咪没打完猫三联可以打狂犬疫苗吗对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、猫没有打三联可以打狂..</p>
+                <h4><a href="/news/article-39771.htm">正规免费领养宠物的网站有哪些（免费领养宠物的app有哪些）</a></h4>
+                <p>摘要：       本篇文章给大家谈谈正规免费领养宠物的网站有哪些，以及免费领养宠物的app有哪些对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、有哪些比较可靠的领养喵咪的..</p>
             </div>
         </div>
     </div>
@@ -356,8 +356,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2025-1-5-clash-windows.htm">1月5日更新20.2M/S，2025年最新高速V2ray/SSR/Clash/Shadowrocket订阅链接免费节点地址分享</a></h4>
-                <p>这一次的节点更新覆盖了日本、香港、欧洲、新加坡、美国、加拿大、韩国等地区,最高速度可达20.2 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/news/article-60706.htm">动物疫苗管理法律法规最新文件（动物疫苗的管理方法）</a></h4>
+                <p>摘要：       本篇文章给大家谈谈动物疫苗管理法律法规最新文件，以及动物疫苗的管理方法对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、动物疫苗过期违反那部法律...    </p>
             </div>
         </div>
     </div>
@@ -366,8 +366,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-43738.htm">58同城宠物狗狗领养（58同城领养小狗狗）</a></h4>
-                <p>摘要：       今天给各位分享58同城宠物狗狗领养的知识，其中也会对58同城领养小狗狗进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、58上领养狗狗是真的.</p>
+                <h4><a href="/news/article-57253.htm">Jackson 枚举序列化/反序列化</a></h4>
+                <p>枚举类： import com.fasterxml.jackson.annotation.JsonCreator; import com.fasterxml.jackson.annotation.Js</p>
             </div>
         </div>
     </div>
@@ -376,8 +376,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2025-1-26-free-high-speed-nodes.htm">1月26日更新22.3M/S，2025年最新高速Shadowrocket/Clash/SSR/V2ray订阅链接免费节点地址分享</a></h4>
-                <p>这一次的节点更新覆盖了欧洲、美国、韩国、新加坡、香港、加拿大、日本等地区,最高速度可达22.3 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2025-2-2-free-node-subscribe.htm">2月2日更新20.3M/S，2025年最新高速SSR/Clash/Shadowrocket/V2ray订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了美国、韩国、加拿大、欧洲、新加坡、香港、日本等地区,最高速度可达20.3 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -386,8 +386,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-57822.htm">动物疫苗如何存放 动物疫苗如何存放保鲜</a></h4>
-                <p>摘要：       大家好，今天小编关注到一个比较有意思的话题，就是关于动物疫苗如何存放的问题，于是小编就整理了2个相关介绍动物疫苗如何存放的解答，让我们一起看看吧。动物防疫站存放疫苗冷库如何设计？成</p>
+                <h4><a href="/free-nodes/2025-3-5-free-ssr-subscribe.htm">3月5日更新20M/S，2025年最新高速Shadowrocket/SSR/Clash/V2ray订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了加拿大、香港、日本、美国、新加坡、欧洲、韩国等地区,最高速度可达20 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -398,7 +398,7 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                                <h4><span class="badge" style="float: right;">24</span> <a href="/date/2025-03/" title="2025-03 归档">2025-03</a></h4>
+                                <h4><span class="badge" style="float: right;">33</span> <a href="/date/2025-03/" title="2025-03 归档">2025-03</a></h4>
                                 <h4><span class="badge" style="float: right;">80</span> <a href="/date/2025-02/" title="2025-02 归档">2025-02</a></h4>
                                 <h4><span class="badge" style="float: right;">83</span> <a href="/date/2025-01/" title="2025-01 归档">2025-01</a></h4>
                             </div>
