--- a/free-nodes/page-3.htm
+++ b/free-nodes/page-3.htm
@@ -114,6 +114,57 @@
         <div class="row">
             <div class="col-md-8">
                 <div class="xcblog-blog-list">
+                                        <div class="row xcblog-blog-item" data-date="2025-02-18">
+                        <div class="col-lg-4">
+                            <div class="position-relative">
+                                <a href="/free-nodes/2025-2-18-free-ssr-subscribe.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20240214/2185035859b7710c0e4307b2d9117bf7.webp" alt="2月18日更新19.2M/S，2025年最新高速V2ray/Shadowrocket/Clash/SSR订阅链接免费节点地址分享" class="radius-image img-fluid">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-lg-8 mt-lg-0 mt-5">
+                            <a href="/free-nodes/2025-2-18-free-ssr-subscribe.htm" class="xcblog-blog-url">
+                                <h3 class="title-big xcblog-blog-title">2月18日更新19.2M/S，2025年最新高速V2ray/Shadowrocket/Clash/SSR订阅链接免费节点地址分享</h3>
+                            </a>
+                            <p class="mt-4">这一次的节点更新覆盖了韩国、香港、美国、日本、加拿大、欧洲、新加坡等地区,最高速度可达19.2 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                            <p class="title-small mb-2 pull-right xcblog-blog-time">
+                                2月18日                            </p>
+                        </div>
+                    </div>
+                                        <div class="row xcblog-blog-item" data-date="2025-02-17">
+                        <div class="col-lg-4">
+                            <div class="position-relative">
+                                <a href="/free-nodes/2025-2-17-free-node-subscribe.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20240214/7caaec5e02bb1ce363bb9268b81306bf.webp" alt="2月17日更新20M/S，2025年最新高速SSR/Clash/V2ray/Shadowrocket订阅链接免费节点地址分享" class="radius-image img-fluid">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-lg-8 mt-lg-0 mt-5">
+                            <a href="/free-nodes/2025-2-17-free-node-subscribe.htm" class="xcblog-blog-url">
+                                <h3 class="title-big xcblog-blog-title">2月17日更新20M/S，2025年最新高速SSR/Clash/V2ray/Shadowrocket订阅链接免费节点地址分享</h3>
+                            </a>
+                            <p class="mt-4">这一次的节点更新覆盖了美国、加拿大、香港、日本、新加坡、欧洲、韩国等地区,最高速度可达20 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                            <p class="title-small mb-2 pull-right xcblog-blog-time">
+                                2月17日                            </p>
+                        </div>
+                    </div>
+                                        <div class="row xcblog-blog-item" data-date="2025-02-16">
+                        <div class="col-lg-4">
+                            <div class="position-relative">
+                                <a href="/free-nodes/2025-2-16-free-clash-subscribe.htm" class="xcblog-blog-url">
+                                    <img src="/uploads/20240214/34661d96c32475b8df65ddfa1ef2f56e.webp" alt="2月16日更新22.2M/S，2025年最新高速V2ray/SSR/Clash/Shadowrocket订阅链接免费节点地址分享" class="radius-image img-fluid">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-lg-8 mt-lg-0 mt-5">
+                            <a href="/free-nodes/2025-2-16-free-clash-subscribe.htm" class="xcblog-blog-url">
+                                <h3 class="title-big xcblog-blog-title">2月16日更新22.2M/S，2025年最新高速V2ray/SSR/Clash/Shadowrocket订阅链接免费节点地址分享</h3>
+                            </a>
+                            <p class="mt-4">这一次的节点更新覆盖了香港、欧洲、加拿大、韩国、日本、美国、新加坡等地区,最高速度可达22.2 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                            <p class="title-small mb-2 pull-right xcblog-blog-time">
+                                2月16日                            </p>
+                        </div>
+                    </div>
                                         <div class="row xcblog-blog-item" data-date="2025-02-15">
                         <div class="col-lg-4">
                             <div class="position-relative">
@@ -233,57 +284,6 @@
                                 2月9日                            </p>
                         </div>
                     </div>
-                                        <div class="row xcblog-blog-item" data-date="2025-02-08">
-                        <div class="col-lg-4">
-                            <div class="position-relative">
-                                <a href="/free-nodes/2025-2-8-free-node-subscribe.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20240214/72b0aaa8811f609f03eeb6123bd29eae.webp" alt="2月8日更新20.4M/S，2025年最新高速SSR/Shadowrocket/V2ray/Clash订阅链接免费节点地址分享" class="radius-image img-fluid">
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-lg-8 mt-lg-0 mt-5">
-                            <a href="/free-nodes/2025-2-8-free-node-subscribe.htm" class="xcblog-blog-url">
-                                <h3 class="title-big xcblog-blog-title">2月8日更新20.4M/S，2025年最新高速SSR/Shadowrocket/V2ray/Clash订阅链接免费节点地址分享</h3>
-                            </a>
-                            <p class="mt-4">这一次的节点更新覆盖了加拿大、美国、韩国、日本、新加坡、欧洲、香港等地区,最高速度可达20.4 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-                            <p class="title-small mb-2 pull-right xcblog-blog-time">
-                                2月8日                            </p>
-                        </div>
-                    </div>
-                                        <div class="row xcblog-blog-item" data-date="2025-02-07">
-                        <div class="col-lg-4">
-                            <div class="position-relative">
-                                <a href="/free-nodes/2025-2-7-free-node-subscribe.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20240214/3f1275233c413ecd16089d50a0615f3d.webp" alt="2月7日更新22.2M/S，2025年最新高速Clash/Shadowrocket/SSR/V2ray订阅链接免费节点地址分享" class="radius-image img-fluid">
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-lg-8 mt-lg-0 mt-5">
-                            <a href="/free-nodes/2025-2-7-free-node-subscribe.htm" class="xcblog-blog-url">
-                                <h3 class="title-big xcblog-blog-title">2月7日更新22.2M/S，2025年最新高速Clash/Shadowrocket/SSR/V2ray订阅链接免费节点地址分享</h3>
-                            </a>
-                            <p class="mt-4">这一次的节点更新覆盖了香港、新加坡、日本、加拿大、韩国、美国、欧洲等地区,最高速度可达22.2 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-                            <p class="title-small mb-2 pull-right xcblog-blog-time">
-                                2月7日                            </p>
-                        </div>
-                    </div>
-                                        <div class="row xcblog-blog-item" data-date="2025-02-06">
-                        <div class="col-lg-4">
-                            <div class="position-relative">
-                                <a href="/free-nodes/2025-2-6-free-high-speed-nodes.htm" class="xcblog-blog-url">
-                                    <img src="/uploads/20240214/1694a934d953b0dc61fe40ac4034f27c.webp" alt="2月6日更新20.6M/S，2025年最新高速Shadowrocket/Clash/V2ray/SSR订阅链接免费节点地址分享" class="radius-image img-fluid">
-                                </a>
-                            </div>
-                        </div>
-                        <div class="col-lg-8 mt-lg-0 mt-5">
-                            <a href="/free-nodes/2025-2-6-free-high-speed-nodes.htm" class="xcblog-blog-url">
-                                <h3 class="title-big xcblog-blog-title">2月6日更新20.6M/S，2025年最新高速Shadowrocket/Clash/V2ray/SSR订阅链接免费节点地址分享</h3>
-                            </a>
-                            <p class="mt-4">这一次的节点更新覆盖了加拿大、美国、日本、韩国、新加坡、香港、欧洲等地区,最高速度可达20.6 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-                            <p class="title-small mb-2 pull-right xcblog-blog-time">
-                                2月6日                            </p>
-                        </div>
-                    </div>
                                     </div>
 
                 <ul class="pagination"><li><a href="/free-nodes/page-2.htm">&laquo;</a></li> <li><a href="/free-nodes/">1</a></li><li><a href="/free-nodes/page-2.htm">2</a></li><li class="active"><span>3</span></li><li><a href="/free-nodes/page-4.htm">4</a></li><li><a href="/free-nodes/page-5.htm">5</a></li><li><a href="/free-nodes/page-6.htm">6</a></li><li><a href="/free-nodes/page-7.htm">7</a></li> <li><a href="/free-nodes/page-4.htm">&raquo;</a></li></ul>            </div>
@@ -293,8 +293,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-48179.htm">v-model.trim用法及其他修饰符</a></h4>
-                <p>v-model的修饰符 v-model.lazy 只有在input输入框发生一个blur时才触发 v-model.trim 将用户输入的前后的空格去掉 v-model.number 将用户输入的字符串</p>
+                <h4><a href="/news/article-45727.htm">C语言实现BMP格式转RGB格式、YUV格式</a></h4>
+                <p>此代码的功能是传入BMP格式的数据，传出提取的RGB数据。BMP图像支持8bit、16bit、24bit、32bit的格式，得到的都是24bit的RGB格式图像，如果想得到YUV格式的图像，可以将得到</p>
             </div>
         </div>
     </div>
@@ -303,8 +303,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2025-2-6-free-high-speed-nodes.htm">2月6日更新20.6M/S，2025年最新高速Shadowrocket/Clash/V2ray/SSR订阅链接免费节点地址分享</a></h4>
-                <p>这一次的节点更新覆盖了加拿大、美国、日本、韩国、新加坡、香港、欧洲等地区,最高速度可达20.6 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/news/article-54467.htm">动物疫苗工艺有哪些种类（动物疫苗工艺流程）</a></h4>
+                <p>摘要：       今天给各位分享动物疫苗工艺有哪些种类的知识，其中也会对动物疫苗工艺流程进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、所有疫苗的种类的区别.</p>
             </div>
         </div>
     </div>
@@ -313,8 +313,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-35376.htm">厦门市宠物领养中心地址（厦门领养宠物猫中心）</a></h4>
-                <p>摘要：       今天给各位分享厦门市宠物领养中心地址的知识，其中也会对厦门领养宠物猫中心进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、厦门宠物猫在哪买..</p>
+                <h4><a href="/news/article-63082.htm">本地宠物领养机构排名（当地宠物领养基地）</a></h4>
+                <p>摘要：       今天给各位分享本地宠物领养机构排名的知识，其中也会对当地宠物领养基地进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、宠物领养是在哪些平台比.</p>
             </div>
         </div>
     </div>
@@ -323,8 +323,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-48678.htm">我想开宠物店（我想开宠物店怎么申请）</a></h4>
-                <p>摘要：       本篇文章给大家谈谈我想开宠物店，以及我想开宠物店怎么申请对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、开一个宠物店大概需要多少投资?...        </p>
+                <h4><a href="/news/article-62485.htm">宠物粮食店一年利润怎么样啊知乎文章 宠物粮食店一年利润怎么样啊知乎文章</a></h4>
+                <p>摘要：       大家好，今天小编关注到一个比较有意思的话题，就是关于宠物粮食店一年利润怎么样啊知乎文章的问题，于是小编就整理了4个相关介绍宠物粮食店一年利润怎么样啊知乎文章的解答，让我们一起看看吧</p>
             </div>
         </div>
     </div>
@@ -333,8 +333,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-69328.htm">Java 18为什么要指定UTF-8为默认字符集_在线工具</a></h4>
-                <p>在Java 18中，将UTF-8指定为标准Java API的默认字符集。有了这一更改，依赖于默认字符集的API将在所有实现、操作系统、区域设置和配置中保持一致。 做这一更改的主要目标：  当Java程</p>
+                <h4><a href="/news/article-39771.htm">正规免费领养宠物的网站有哪些（免费领养宠物的app有哪些）</a></h4>
+                <p>摘要：       本篇文章给大家谈谈正规免费领养宠物的网站有哪些，以及免费领养宠物的app有哪些对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、有哪些比较可靠的领养喵咪的..</p>
             </div>
         </div>
     </div>
@@ -343,8 +343,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-52309.htm">人用注射器和兽用注射器有什么区别（医用注射器和兽用注射器有什么区别）</a></h4>
-                <p>摘要：       本篇文章给大家谈谈人用注射器和兽用注射器有什么区别，以及医用注射器和兽用注射器有什么区别对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、刚买的兽医用的注..</p>
+                <h4><a href="/free-nodes/2025-2-21-free-node-subscribe.htm">2月21日更新18.2M/S，2025年最新高速V2ray/Clash/SSR/Shadowrocket订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了香港、日本、欧洲、韩国、新加坡、加拿大、美国等地区,最高速度可达18.2 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -353,8 +353,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-53918.htm">猫咪的三针疫苗多少钱一只（猫疫苗三针一共多少钱）</a></h4>
-                <p>摘要：       本篇文章给大家谈谈猫咪的三针疫苗多少钱一只，以及猫疫苗三针一共多少钱对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、猫咪打疫苗全部大概需要多少钱?...  </p>
+                <h4><a href="/news/article-38782.htm">北京农业大学动物医院挂号（北京农大动物医院怎么挂号）</a></h4>
+                <p>摘要：       今天给各位分享北京农业大学动物医院挂号的知识，其中也会对北京农大动物医院怎么挂号进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、如何预约挂.</p>
             </div>
         </div>
     </div>
@@ -363,18 +363,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2025-2-9-clash-node-daily-updates.htm">2月9日更新21.1M/S，2025年最新高速Clash/V2ray/Shadowrocket/SSR订阅链接免费节点地址分享</a></h4>
-                <p>这一次的节点更新覆盖了韩国、欧洲、新加坡、日本、香港、美国、加拿大等地区,最高速度可达21.1 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="row w3l-achievements">
-    <div class="col-lg-12 item">
-        <div class="card">
-            <div class="box-wrap">
-                <h4><a href="/news/article-37798.htm">同城免费领养宠物怎么领取 同城免费领养宠物怎么领取的</a></h4>
-                <p>摘要：       大家好，今天小编关注到一个比较有意思的话题，就是关于同城免费领养宠物怎么领取的问题，于是小编就整理了4个相关介绍同城免费领养宠物怎么领取的解答，让我们一起看看吧。58上怎么发布免费</p>
+                <h4><a href="/free-nodes/2025-1-31-free-ssr-node.htm">1月31日更新22.4M/S，2025年最新高速V2ray/Clash/Shadowrocket/SSR订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了香港、美国、新加坡、加拿大、韩国、日本、欧洲等地区,最高速度可达22.4 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -389,13 +379,23 @@
         </div>
     </div>
 </div>
+<div class="row w3l-achievements">
+    <div class="col-lg-12 item">
+        <div class="card">
+            <div class="box-wrap">
+                <h4><a href="/news/article-38287.htm">面试之Java String 编码相关</a></h4>
+                <p>另有一篇我的字符编码本质入门的文章见这里：https://www.cnblogs.com/uncleguo/p/16008551.html 　　实话说，作为一个多年Java老年程序员，直到近来，在没有</p>
+            </div>
+        </div>
+    </div>
+</div>
 
 <h3 class="title-big mb-sm-3 mb-3">归纳</h3>
 <div class="row w3l-achievements">
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                                <h4><span class="badge" style="float: right;">24</span> <a href="/date/2025-03/" title="2025-03 归档">2025-03</a></h4>
+                                <h4><span class="badge" style="float: right;">33</span> <a href="/date/2025-03/" title="2025-03 归档">2025-03</a></h4>
                                 <h4><span class="badge" style="float: right;">80</span> <a href="/date/2025-02/" title="2025-02 归档">2025-02</a></h4>
                                 <h4><span class="badge" style="float: right;">83</span> <a href="/date/2025-01/" title="2025-01 归档">2025-01</a></h4>
                             </div>
